tests/e2e/scenarios/negative/compile_unknown_import.ks
// Expected phase: compile — stdlib module path does not exist (module not found).

import { x } from "kestrel:no_such_module_e2e_51"
